--- a/docs/Operation/kuber/babaei/6.md
+++ b/docs/Operation/kuber/babaei/6.md
@@ -19,47 +19,88 @@
 
 ### Purpose use of Kubernetes Cluster
 
-- Education
-  - MiniKube
-  - Single-node cluster with Kubeadm/GCP/AWD
-- Development & Testing
-  - Multi-node cluster with a **Single Master** and **Multiple Workers**
-  - Setup using kubeadm tool or quick provision on GCP/AWS/AKS
+#### Education
 
-- Hosting Production Application
-  - **Hight Available** multi-node cluster with **Multi Master Node**
-  - Using *kubeadm/KOps* on-perm or GCP/AWS or other supported platform
-  - Considering for large cluster
-    - up to 5k nodes
-    - up to 150k PODs in the cluster
-    - up to 300k total containers
-    - up to 100 pods per node
+- MiniKube
+- Single-node cluster with Kubeadm/GCP/AWD
 
-- Cloud or On-premise?
-  - Use Kubeadm/KOps/Kubespray for on-perm
-  - GKE for GCP
-  - EKS for AWS
-  - AKS for Azure
+#### Development & Testing
 
-- Workloads
-  - How many?
-  - What kind?
-    - Web
-    - AI
-    - Big Data Analytics
+- Multi-node cluster with a **Single Master** and **Multiple Workers**
+- Setup using kubeadm tool or quick provision on GCP/AWS/AKS
 
-- Application Resource Requirement
-  - CPU intensive
-  - Memory intensive
+#### Hosting Production Application
 
-- Storage
-  - High performance - SSD backed storage
-  - Multiple concurrent connections - Network-based storage
-  - Persist shared volumes - for shared access across shared PODs
+- **Hight Available** multi-node cluster with **Multi Master Node**
+- Using *kubeadm/KOps* on-perm or GCP/AWS or other supported platform
+- Considering for large cluster
+  - up to 5k nodes
+  - up to 150k PODs in the cluster
+  - up to 300k total containers
+  - up to 100 pods per node
 
-- Network Traffic
-  - Continuous Heavy
-  - Burst
+#### Cloud or On-premise?
+
+- Use Kubeadm/KOps/Kubespray for on-perm
+- GKE for GCP
+- EKS for AWS
+- AKS for Azure
+
+#### Workloads
+
+- How many?
+- What kind?
+  - Web
+  - AI
+  - Big Data Analytics
+
+#### Application Resource Requirement
+
+- CPU intensive
+- Memory intensive
+
+#### Storage
+
+- High performance - SSD backed storage
+- Multiple concurrent connections - Network-based storage
+- Persist shared volumes - for shared access across shared PODs
+
+#### Network Traffic
+
+- Continuous Heavy
+- Burst
+
+#### Nodes
+
+- Virtual or physical machines
+
+- Master vs worker node
+  - Master nodes can host workloads (not recommended)
+- Linux x86_64 architecture
+
+#### Large Scale Master Nodes
+
+- Is better to cluster ETCD on different machine
+
+## Choosing Kubernetes Infrastructure
+
+### Turnkey Solution
+
+- Openshift
+
+- Vagrant
+
+### Hosted Solution
+
+- Manged by host
+- K8S-as-a-Service
+- GKE - Google kubernetes engine
+- Amazon elastic container service for kubernetes (EKS)
+- Microsoft Azure
+
+## High Availability Kubernetes Cluster
+
+
 
 ## Commands
 
