Update session 6 - Update mmu

--- a/docs/Operation/kuber/babaei/6.md
+++ b/docs/Operation/kuber/babaei/6.md
@@ -100,7 +100,50 @@
 
 ## High Availability Kubernetes Cluster
 
+### Kubernetes Cluster Leader Election
 
+A [simple view][simple-view-le] to get better understanding
+
+### [Options for Highly Available Topology][ofhat]
+
+- #### [Stacked etcd topology][set]
+
+- #### [External etcd topology][eet]
+
+- #### Number of ETCD Nodes
+
+   > | Instances | Fault Tolerance | Usage |
+   > | --- | --- | --- |
+   > | 1 | 0 | no  |
+   > | 2 | 0 | no  |
+   > | 3 | 1 | yes |
+   > | 4 | 1 | no  |
+   > | 5 | 2 | yes |
+   > | 6 | 2 | no  |
+   > | 7 | 3 | yes |
+
+## Deploy Kubernetes Cluster
+
+### Manually
+
+- [Kubernetes the hard way][k8s-thw]
+- [Kubeadm][kubeadm-cluster]
+
+#### [Steps of Kubeadm][step-of-kadm]
+
+1. Provision the VMs (master, worker)
+2. Select and install CRE (docker, crio, ...)
+3. Install kubeadm on all nodes
+4. Initialize the cluster (master node)
+5. Apply a CLI (calico, flannel, ...) on cluster
+6. Join worker nodes to the cluster
+
+### Automation
+
+### Developer Mode Provision
+
+- [vagrant]
+- [kind]
 
 ## Commands
 
@@ -110,3 +153,12 @@ kubectl get --all-namespace -o yaml > all-deploy-services.yaml
 ```
 
 [Velero]: https://velero.io/
+[simple-view-le]: /docs/assets/kuber/babaei/S06-k8s-cluster-leader-election.png
+[ofhat]: https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/ha-topology/
+[set]: https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/ha-topology/#stacked-etcd-topology
+[eet]: https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/ha-topology/#external-etcd-topology
+[k8s-thw]: https://github.com/kelseyhightower/kubernetes-the-hard-way
+[kubeadm-cluster]: https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/create-cluster-kubeadm/
+[step-of-kadm]: https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/create-cluster-kubeadm/#instructions
+[vagrant]: https://developer.hashicorp.com/vagrant
+[kind]: https://kind.sigs.k8s.io/
