--- a/docs/Operation/kuber/babaei/2.md
+++ b/docs/Operation/kuber/babaei/2.md
@@ -1,4 +1,4 @@
-# Main Components
+# 02. Main Components
 
 ## [Control Plane Components](https://kubernetes.io/docs/concepts/overview/components/#control-plane-components)
 
