--- a/docs/Operation/kuber/babaei/5.md
+++ b/docs/Operation/kuber/babaei/5.md
@@ -1,16 +1,16 @@
-# Configuration Management
+# 05. Configuration Management
 
 ## [Define Environment Variables for a Container][Def-Env-Var-For-a-Container]
 
-- [Different method to define configs][Diff-methd-to-def-conf]
+### [Different method to define configs][Diff-methd-to-def-conf]
 
-  - Plain Key-Value
-  - [ConfigMap] a map from configuration in key-value format
-  - [Secret]
-    - Some more secure tools:
-    - [Mozilla SOps][Mozilla-SOps]
-    - [HashiCorp Vault][HashiCorp-Vault]
-    - [Helm Secrets][Helm-Secrets]
+- Plain Key-Value
+- [ConfigMap] a map from configuration in key-value format
+- [Secret]
+  - Some more secure tools:
+  - [Mozilla SOps][Mozilla-SOps]
+  - [HashiCorp Vault][HashiCorp-Vault]
+  - [Helm Secrets][Helm-Secrets]
 
 ## [Multiple containers pods][Multiple-containers-pods]
 
@@ -36,7 +36,7 @@ kube-controller-manager --pod-eviction-timeout=5m0s
 - Cluster Upgrade Process
 - Backup and Restore Methodologies
 
-## Kubernetes Release
+## Kubernetes Releases
 
 There are many solution to install kubernetes cluster
 
@@ -75,34 +75,20 @@ kubectl uncordon <node-name> ;Remove unscheduled label from node
 ```
 <!-- http links -->
 [Def-Env-Var-For-a-Container]: https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
-
 [Diff-methd-to-def-conf]: https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
-
 [ConfigMap]: https://kubernetes.io/docs/tasks/configure-pod-container/configure-pod-configmap/#configure-all-key-value-pairs-in-a-configmap-as-container-environment-variables
-
 [Secret]: https://kubernetes.io/docs/tasks/inject-data-application/distribute-credentials-secure/#configure-all-key-value-pairs-in-a-secret-as-container-environment-variables
-
 [Mozilla-SOps]: https://github.com/getsops/sops
 [HashiCorp-Vault]: https://www.vaultproject.io/
 [Helm-Secrets]: https://github.com/jkroepke/helm-secrets
-
 [Multiple-containers-pods]: https://kubernetes.io/docs/concepts/workloads/pods/#how-pods-manage-multiple-containers
-
 [Ptrns-for-Cmpsit-Cont]: https://kubernetes.io/blog/2015/06/the-distributed-system-toolkit-patterns/
-
 [Init-Containers]: https://kubernetes.io/docs/concepts/workloads/pods/init-containers/
-
 [Self-Healing-Apps]: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
-
 [Separately]: https://github.com/kelseyhightower/kubernetes-the-hard-way
-
 [KubeADM]: https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/create-cluster-kubeadm/
-
 [Kubespray]: https://github.com/kubespray
-
 [update-cluster]: https://kubernetes.io/docs/tasks/administer-cluster/cluster-upgrade/
-
-<!-- image links -->
 [kube-components]: ../../../assets/kuber/babaei/S05-k8s-release.png
 [cluster-versioning]: ../../../assets/kuber/babaei/S05-k8s-cluster-versioning.png
 [Update-patch-policy]: ../../../assets/kuber/babaei/S05-k8s-version-update-support.png
