--- a/docs/Operation/kuber/babaei/4.md
+++ b/docs/Operation/kuber/babaei/4.md
@@ -78,7 +78,8 @@ spec:
 A DaemonSet ensures that all (or some) Nodes run a copy of a Pod.
 ***Exactly one*** instance of every pod.
 
-<img src="/docs/assets/kuber/babaei/S04-daemonset-01.png" width="50%" height="50%" >
+![deamonset](/docs/assets/kuber/babaei/S04-daemonset-01.png)
+![deamonset](../../../assets/kuber/babaei/S04-daemonset-01.png)
 
 ## [Static Pods](https://kubernetes.io/docs/tasks/configure-pod-container/static-pod/)
 
@@ -89,8 +90,6 @@ Static Pods are managed directly by the kubelet daemon on a specific node, witho
 - Have a quick review of [controller](2.md#kube-controller-manager) workload
 
 ## [Configure Multiple Schedulers](https://kubernetes.io/docs/tasks/extend-kubernetes/configure-multiple-schedulers/)
-
-...v4-145"
 
 ## [Monitoring, Logging, and Debugging](https://kubernetes.io/docs/tasks/debug/)
 
