update link's images

--- a/docs/Operation/kuber/babaei/3.md
+++ b/docs/Operation/kuber/babaei/3.md
@@ -126,11 +126,9 @@ kubectl port-forward service/nginx-internal 80:8000
 
 ### Service Type Schema
 
-<img src="../../../../assets/cicd/kuber/docs/babaei/S03-service-02.jpg" width="50%" height="50%" >
-
-<img src="../../../../assets/cicd/kuber/docs/babaei/S03-service-01.png" width="50%" height="50%" >
-
-<img src="../../../../assets/cicd/kuber/docs/babaei/S03-service-03.png" width="50%" height="50%" alt="Explain Service Ports" >
+![S03-service-01](/docs/assets/kuber/babaei/S03-service-01.png)
+![S03-service-02](/docs/assets/kuber/babaei/S03-service-02.jpg)
+![S03-service-03](/docs/assets/kuber/babaei/S03-service-03.png)
 
 ## [Schedular](https://kubernetes.io/docs/concepts/scheduling-eviction/kube-scheduler/)
 
