--- a/docs/Operation/kuber/babaei/5.md
+++ b/docs/Operation/kuber/babaei/5.md
@@ -90,5 +90,5 @@ kubectl uncordon <node-name> ;Remove unscheduled label from node
 [Kubespray]: https://github.com/kubespray
 [update-cluster]: https://kubernetes.io/docs/tasks/administer-cluster/cluster-upgrade/
 [kube-components]: /docs/assets/kuber/babaei/S05-k8s-release.png
-[cluster-versioning]: ../../../assets/kuber/babaei/S05-k8s-cluster-versioning.png
-[Update-patch-policy]: ../../../assets/kuber/babaei/S05-k8s-version-update-support.png
+[cluster-versioning]: /docs/assets/kuber/babaei/S05-k8s-cluster-versioning.png
+[Update-patch-policy]: /docs/assets/kuber/babaei/S05-k8s-version-update-support.png
