Update command comment

--- a/docs/Operation/kuber/babaei/5.md
+++ b/docs/Operation/kuber/babaei/5.md
@@ -70,7 +70,7 @@ kubectl describe cm <configmapfile.yml>
 kubectl describe cm <configmapfile.yml> --output yaml
 
 kubectl drain <node-name>; drain execute cordon command
-kubectl cordon <node-name> ;Unscheduled label from node
+kubectl cordon <node-name> ;set unscheduled label to node
 kubectl uncordon <node-name> ;Remove unscheduled label from node
 ```
 <!-- http links -->
