--- a/docs/Operation/kuber/babaei/6.md
+++ b/docs/Operation/kuber/babaei/6.md
@@ -106,21 +106,21 @@ A [simple view][simple-view-le] to get better understanding
 
 ### [Options for Highly Available Topology][ofhat]
 
-- #### [Stacked etcd topology][set]
+#### [Stacked etcd topology][set]
 
-- #### [External etcd topology][eet]
+#### [External etcd topology][eet]
 
-- #### Number of ETCD Nodes
+#### Number of ETCD Nodes
 
-   > | Instances | Fault Tolerance | Usage |
-   > | --- | --- | --- |
-   > | 1 | 0 | no  |
-   > | 2 | 0 | no  |
-   > | 3 | 1 | yes |
-   > | 4 | 1 | no  |
-   > | 5 | 2 | yes |
-   > | 6 | 2 | no  |
-   > | 7 | 3 | yes |
+| Instances | Fault Tolerance | Usage |
+| --- | --- | --- |
+| 1 | 0 | no  |
+| 2 | 0 | no  |
+| 3 | 1 | yes |
+| 4 | 1 | no  |
+| 5 | 2 | yes |
+| 6 | 2 | no  |
+| 7 | 3 | yes |
 
 ## Deploy Kubernetes Cluster
 
@@ -145,11 +145,61 @@ A [simple view][simple-view-le] to get better understanding
 - [vagrant]
 - [kind]
 
+## Cluster End2End Test (Validating)
+
+- Full test has around 1K checks - take ages ~ 12h
+- Conforming has around 160 checks - enough to be certified 1.5h
+  - Network should function for intra-pod communication
+  - Service should serve a basic endpoint from pods
+  - Service point latency should not very high
+  - DNS should provide DNS for services
+  - Secret should be consumable in multiple volume in a pod
+  - Secret should be consumable from pods in volume in mapping
+  - ConfigMap should be consumable from pods in volumes
+
+### Validate Kubernetes Configuration with [Sonobuoy]
+
+```bash
+sonobuoy run
+sonobuoy status
+sonobuoy log
+sonobuoy delete
+```
+
 ## Commands
 
 ```bash
-# Get all resource configuration files from all namespaces
+# get all resource configuration files from all namespaces
 kubectl get --all-namespace -o yaml > all-deploy-services.yaml
+```
+
+### Upgrade K8S Cluster
+
+```bash
+# upgrade cluster via kubeadm and "-1/+1" strategy
+
+# master nodes
+kubeadm upgrade plan
+sudo apt install kubeadm=vM.m.p # example v1.29.3
+kubeadm upgrade apply vM.m.p
+sudo apt install kubectl=vM.m.p # as same as kubeadm version
+sudo systemctl restart kubelet
+kubectl get nodes
+
+# worker nodes
+# execute it from master node
+kubectl get nodes
+kubectl drain worker-node-01 --ignore-daemonsets
+# execute it from worker-node-01
+sudo apt install kubeadm=vM.m.p # as same as kubeadm version
+sudo apt install kubelet=vM.m.p # as same as kubeadm version
+kubeadm upgrade node
+sudo systemctl restart kubelet
+kubectl uncordon worker-node-01
+kubectl get nodes
+# do it the same for other nodes
+
+# unhold packages if you would have done before
 ```
 
 [Velero]: https://velero.io/
@@ -162,3 +212,4 @@ kubectl get --all-namespace -o yaml > all-deploy-services.yaml
 [step-of-kadm]: https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/create-cluster-kubeadm/#instructions
 [vagrant]: https://developer.hashicorp.com/vagrant
 [kind]: https://kind.sigs.k8s.io/
+[Sonobuoy]: https://sonobuoy.io/
