--- a/docs/Operation/kuber/babaei/6.md
+++ b/docs/Operation/kuber/babaei/6.md
@@ -100,11 +100,18 @@
 
 ## High Availability Kubernetes Cluster
 
+### Tips:
+>__ControlePlane__: Master Nodes
+<br>
+>**DataPlane**: Worker Nodes
+
 ### Kubernetes Cluster Leader Election
 
 A [simple view][simple-view-le] to get better understanding
 
-### [Options for Highly Available Topology][ofhat]
+### ETC
+
+#### [Options for Highly Available Topology][ofhat]
 
 #### [Stacked etcd topology][set]
 
