update chpapter 06 II

--- a/docs/Operation/kuber/babaei/6.md
+++ b/docs/Operation/kuber/babaei/6.md
@@ -100,10 +100,11 @@
 
 ## High Availability Kubernetes Cluster
 
-### Tips:
->__ControlePlane__: Master Nodes
+### Tips
+
+>ControlePlane: Master Nodes
 <br>
->**DataPlane**: Worker Nodes
+>DataPlane: Worker Nodes
 
 ### Kubernetes Cluster Leader Election
 
