Update images addr

--- a/docs/Operation/kuber/babaei/6.md
+++ b/docs/Operation/kuber/babaei/6.md
@@ -106,7 +106,19 @@
 > <br>
 > DataPlane: Worker Nodes
 
-### Kubernetes Cluster Leader Election
+### API Server
+
+[API-Server] can cluster in `Active Active` mode via a *loadbalancer* (Nginx, Haproxy, ...)
+
+### Control Manager
+
+Control-Manager must be cluster in `Active Passive` mode
+
+### Scheduler
+
+Scheduler must be cluster in `Active Passive` mode
+
+### Cluster Leader Election
 
 A [simple view][simple-view-le] to get better understanding
 
@@ -221,3 +233,4 @@ kubectl get nodes
 [vagrant]: https://developer.hashicorp.com/vagrant
 [kind]: https://kind.sigs.k8s.io/
 [Sonobuoy]: https://sonobuoy.io/
+[API-Server]: /docs/assets/images/S06-k8s-cluster-api_server.png
