--- a/docs/Operation/kuber/babaei/6.md
+++ b/docs/Operation/kuber/babaei/6.md
@@ -222,8 +222,10 @@ kubectl get nodes
 # unhold packages if you would have done before
 ```
 
+[API-Server]: /docs/site/assets/images/S06-k8s-cluster-api_server.png
+[simple-view-le]: ../../../assets/kuber/babaei/S06-k8s-cluster-leader-election.png
+
 [Velero]: https://velero.io/
-[simple-view-le]: /docs/assets/kuber/babaei/S06-k8s-cluster-leader-election.png
 [ofhat]: https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/ha-topology/
 [set]: https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/ha-topology/#stacked-etcd-topology
 [eet]: https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/ha-topology/#external-etcd-topology
@@ -233,4 +235,3 @@ kubectl get nodes
 [vagrant]: https://developer.hashicorp.com/vagrant
 [kind]: https://kind.sigs.k8s.io/
 [Sonobuoy]: https://sonobuoy.io/
-[API-Server]: /docs/assets/images/S06-k8s-cluster-api_server.png
