--- a/docs/Operation/kuber/babaei/6.md
+++ b/docs/Operation/kuber/babaei/6.md
@@ -222,8 +222,8 @@ kubectl get nodes
 # unhold packages if you would have done before
 ```
 
-[API-Server]: /assets/images/S06-k8s-cluster-api_server.png
-[simple-view-le]: ../../../assets/kuber/babaei/S06-k8s-cluster-leader-election.png
+[API-Server]: /docs/assets/kuber/babaei/S06-k8s-cluster-api_server.png
+[simple-view-le]: /docs/assets/kuber/babaei/S06-k8s-cluster-leader-election.png
 
 [Velero]: https://velero.io/
 [ofhat]: https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/ha-topology/
