--- a/docs/Operation/kuber/babaei/6.md
+++ b/docs/Operation/kuber/babaei/6.md
@@ -98,7 +98,7 @@
 - Amazon elastic container service for kubernetes (EKS)
 - Microsoft Azure
 
-## High Availability Kubernetes Cluster
+## Cluster High Availability
 
 ### Tips
 
@@ -112,23 +112,27 @@
 
 ### Control Manager
 
-Control-Manager must be cluster in `Active Passive` mode
+[Control-Manager] must be cluster in `Active Passive` mode
 
 ### Scheduler
 
-Scheduler must be cluster in `Active Passive` mode
+[Scheduler] must be cluster in `Active Passive` mode
 
-### Cluster Leader Election
+### Leader Election
+
+[Leader election][leader-election] is a set of candidates for becoming leader is identified.
 
 A [simple view][simple-view-le] to get better understanding
 
 ### ETC
 
-#### [Options for Highly Available Topology][ofhat]
+#### [Options][ofhat] for Highly Available Topology
 
-#### [Stacked etcd topology][set]
+#### [Stacked] etcd topology
 
-#### [External etcd topology][eet]
+#### [External] etcd topology
+
+API-Servers should [recognize] all ETCD external nodes
 
 #### Number of ETCD Nodes
 
@@ -143,6 +147,8 @@ A [simple view][simple-view-le] to get better understanding
 | 7 | 3 | yes |
 
 ## Deploy Kubernetes Cluster
+
+Minimum 3 nodes to setup K8S cluster
 
 ### Manually
 
@@ -186,6 +192,11 @@ sonobuoy log
 sonobuoy delete
 ```
 
+## Develop Env K8S Cluster
+
+- Vagrant
+- [Kind]
+
 ## Commands
 
 ```bash
@@ -224,14 +235,19 @@ kubectl get nodes
 
 [API-Server]: /docs/assets/kuber/babaei/S06-k8s-cluster-api_server.png
 [simple-view-le]: /docs/assets/kuber/babaei/S06-k8s-cluster-leader-election.png
+[Control-Manager]: /docs/assets/kuber/babaei/S06-k8s-cm-schdlr.png
+[Scheduler]: /docs/assets/kuber/babaei/S06-k8s-cm-schdlr.png
+[Stacked]: /docs/assets/kuber/babaei/S06-k8s-cluster-etcd-stck.png
+[External]: /docs/assets/kuber/babaei/S06-k8s-cluster-etcd-ext.png
+[recognize]: /docs/assets/kuber/babaei/S06-k8s-cluster-etcd-ext-cfg.png
 
+[leader-election]: https://kubernetes.io/blog/2016/01/simple-leader-election-with-kubernetes/
 [Velero]: https://velero.io/
 [ofhat]: https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/ha-topology/
-[set]: https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/ha-topology/#stacked-etcd-topology
-[eet]: https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/ha-topology/#external-etcd-topology
 [k8s-thw]: https://github.com/kelseyhightower/kubernetes-the-hard-way
 [kubeadm-cluster]: https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/create-cluster-kubeadm/
 [step-of-kadm]: https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/create-cluster-kubeadm/#instructions
 [vagrant]: https://developer.hashicorp.com/vagrant
 [kind]: https://kind.sigs.k8s.io/
 [Sonobuoy]: https://sonobuoy.io/
+[Kind]: https://kind.sigs.k8s.io/
