Update main titles, remove stack.push

--- a/docs/Operation/kuber/babaei/6.md
+++ b/docs/Operation/kuber/babaei/6.md
@@ -166,9 +166,10 @@ Minimum 3 nodes to setup K8S cluster
 
 ### Automation
 
-### Developer Mode Provision
+#### Developer Mode Provision
 
 - [vagrant]
+  - [Vagrantfile and Scripts][k2v] to automate k8s setup using kubeadm
 - [kind]
 
 ## Cluster End2End Test (Validating)
@@ -183,7 +184,7 @@ Minimum 3 nodes to setup K8S cluster
   - Secret should be consumable from pods in volume in mapping
   - ConfigMap should be consumable from pods in volumes
 
-### Validate Kubernetes Configuration with [Sonobuoy]
+### Validate K8S Configuration with [Sonobuoy]
 
 ```bash
 sonobuoy run
@@ -192,16 +193,18 @@ sonobuoy log
 sonobuoy delete
 ```
 
-## Develop Env K8S Cluster
-
-- Vagrant
-- [Kind]
-
 ## Commands
 
 ```bash
 # get all resource configuration files from all namespaces
 kubectl get --all-namespace -o yaml > all-deploy-services.yaml
+```
+
+### Installation Tips
+
+```bash
+# hold services to avoid update wrongly
+sudo apt-mark hold kubelet kubeadm kubectl containerd ...
 ```
 
 ### Upgrade K8S Cluster
@@ -218,10 +221,10 @@ sudo systemctl restart kubelet
 kubectl get nodes
 
 # worker nodes
-# execute it from master node
+## execute it from master node
 kubectl get nodes
 kubectl drain worker-node-01 --ignore-daemonsets
-# execute it from worker-node-01
+## execute it from worker-node-01
 sudo apt install kubeadm=vM.m.p # as same as kubeadm version
 sudo apt install kubelet=vM.m.p # as same as kubeadm version
 kubeadm upgrade node
@@ -250,4 +253,4 @@ kubectl get nodes
 [vagrant]: https://developer.hashicorp.com/vagrant
 [kind]: https://kind.sigs.k8s.io/
 [Sonobuoy]: https://sonobuoy.io/
-[Kind]: https://kind.sigs.k8s.io/
+[k2v]: https://github.com/techiescamp/vagrant-kubeadm-kubernetes
