--- a/docs/Operation/kuber/babaei/6.md
+++ b/docs/Operation/kuber/babaei/6.md
@@ -207,12 +207,32 @@ kubectl get --all-namespace -o yaml > all-deploy-services.yaml
 sudo apt-mark hold kubelet kubeadm kubectl containerd ...
 ```
 
+### Join a Worker
+
+```bash
+# Master node
+
+## get master node IP addr
+kubectl cluster-info
+
+## get endpoints list
+kubectl get endpoints -n kube-system
+
+## get token from master
+kubeadm token list
+
+# Worker node
+
+## join a worker to master
+kubeadm join $MASTER_IP:$MASTER_PORT --token $TOKEN --discovery-token-ca-cert-hash sha256:$HASH
+```
+
 ### Upgrade K8S Cluster
 
 ```bash
 # upgrade cluster via kubeadm and "-1/+1" strategy
 
-# master nodes
+# Master nodes
 kubeadm upgrade plan
 sudo apt install kubeadm=vM.m.p # example v1.29.3
 kubeadm upgrade apply vM.m.p
@@ -220,10 +240,12 @@ sudo apt install kubectl=vM.m.p # as same as kubeadm version
 sudo systemctl restart kubelet
 kubectl get nodes
 
-# worker nodes
+# Worker nodes
+
 ## execute it from master node
 kubectl get nodes
 kubectl drain worker-node-01 --ignore-daemonsets
+
 ## execute it from worker-node-01
 sudo apt install kubeadm=vM.m.p # as same as kubeadm version
 sudo apt install kubelet=vM.m.p # as same as kubeadm version
@@ -234,6 +256,34 @@ kubectl get nodes
 # do it the same for other nodes
 
 # unhold packages if you would have done before
+```
+
+### Backup etcd
+
+```bash
+# via 'etcdctl'
+
+## take the snapshot
+sudo ectdctl snapshot save <snapshot_name.db> --cert="" --cacert="" --key=""
+
+## show the taken snapshot
+sudo ectdctl snapshot status --write-out=table <snapshot_name.db> --cert="" --cacert="" --key=""
+
+# Restore backup
+
+## 1st: remove API-Server
+mv /path/to/k8s/config/kube-apiserver.yaml  kube-apiserver.yaml.main
+
+## 2nd: restore a specific snapshot file
+sudo ectdctl snapshot restore --date-directory <..> --initial-cluster <..> --initial-advertise-peer-urls <..> --name=<..>
+
+## 3th: set new ectd data-directory path
+sudo vim /path/to/ectd/config.yaml
+change volumes -> hostPath -> path
+
+## 4th: restore API-Server
+mv /path/to/k8s/config/kube-apiserver.yaml.main  kube-apiserver.yaml
+
 ```
 
 [API-Server]: /docs/assets/kuber/babaei/S06-k8s-cluster-api_server.png
