Update node affinity

--- a/docs/Operation/kuber/babaei/4.md
+++ b/docs/Operation/kuber/babaei/4.md
@@ -16,8 +16,8 @@ Node affinity is conceptually similar to `nodeSelector`, allowing you to constra
 
 #### Available
 
-- **required**DuringScheduling**Ignored**DuringExecution:  The scheduler can't schedule the Pod unless the rule is met. This functions like `nodeSelector`, but with a more expressive syntax.
-- **preferred**DuringScheduling**Ignored**DuringExecution: The scheduler tries to find a node that meets the rule. If a matching node is not available, the scheduler still schedules the Pod.
+- **required DuringScheduling Ignored DuringExecution:**  The scheduler can't schedule the Pod unless the rule is met. This functions like `nodeSelector`, but with a more expressive syntax.
+- **preferred DuringScheduling Ignored DuringExecution:** The scheduler tries to find a node that meets the rule. If a matching node is not available, the scheduler still schedules the Pod.
 
 #### Planned
 
