--- a/docs/Operation/kuber/babaei/2.md
+++ b/docs/Operation/kuber/babaei/2.md
@@ -4,6 +4,8 @@
 
 A simple view of [kubernetes components architecture](../../../assets/kuber/babaei/S01-kuber-arch.png)
 
+[Kubernetes with Cloud Controller architecture](../../../assets/kuber/babaei/S01-kuber-cloud-arch.png)
+
 ## [Control Plane Components](https://kubernetes.io/docs/concepts/overview/components/#control-plane-components)
 
 The control plane's components make global decisions about the cluster (for example, scheduling), as well as detecting and responding to cluster events (for example, starting up a new pod when a deployment's `replicas` field is unsatisfied).
