Update absolute link address

--- a/docs/Operation/kuber/babaei/2.md
+++ b/docs/Operation/kuber/babaei/2.md
@@ -2,9 +2,9 @@
 
 ## Kubernetes Components Architecture
 
-A simple view of [kubernetes components architecture](../../../assets/kuber/babaei/S01-kuber-arch.png)
+kubernetes components architecture ![kc_arch](../../../assets/kuber/babaei/S01-kuber-arch.png)
 
-[Kubernetes with Cloud Controller architecture](../../../assets/kuber/babaei/S01-kuber-cloud-arch.png)
+Kubernetes with Cloud Controller architecture ![kc_cc_arch](../../../assets/kuber/babaei/S01-kuber-cloud-arch.png)
 
 ## [Control Plane Components](https://kubernetes.io/docs/concepts/overview/components/#control-plane-components)
 
