--- a/docs/Operation/kuber/babaei/3.md
+++ b/docs/Operation/kuber/babaei/3.md
@@ -126,9 +126,9 @@ kubectl port-forward service/nginx-internal 80:8000
 
 ### Service Type Schema
 
-![S03-service-01](/docs/assets/kuber/babaei/S03-service-01.png)
-![S03-service-02](/docs/assets/kuber/babaei/S03-service-02.jpg)
-![S03-service-03](/docs/assets/kuber/babaei/S03-service-03.png)
+![S03-service-01](../../../assets/kuber/babaei/S03-service-01.png)
+![S03-service-02](../../../assets/kuber/babaei/S03-service-02.jpg)
+![S03-service-03](../../../assets/kuber/babaei/S03-service-03.png)
 
 ## [Schedular](https://kubernetes.io/docs/concepts/scheduling-eviction/kube-scheduler/)
 
