--- a/docs/Operation/kuber/babaei/6.md
+++ b/docs/Operation/kuber/babaei/6.md
@@ -286,13 +286,13 @@ mv /path/to/k8s/config/kube-apiserver.yaml.main  kube-apiserver.yaml
 
 ```
 
-[API-Server]: /docs/assets/kuber/babaei/S06-k8s-cluster-api_server.png
-[simple-view-le]: /docs/assets/kuber/babaei/S06-k8s-cluster-leader-election.png
-[Control-Manager]: /docs/assets/kuber/babaei/S06-k8s-cm-schdlr.png
-[Scheduler]: /docs/assets/kuber/babaei/S06-k8s-cm-schdlr.png
-[Stacked]: /docs/assets/kuber/babaei/S06-k8s-cluster-etcd-stck.png
-[External]: /docs/assets/kuber/babaei/S06-k8s-cluster-etcd-ext.png
-[recognize]: /docs/assets/kuber/babaei/S06-k8s-cluster-etcd-ext-cfg.png
+[API-Server]: ../../../assets/kuber/babaei/S06-k8s-cluster-api_server.png
+[simple-view-le]: ../../../assets/kuber/babaei/S06-k8s-cluster-leader-election.png
+[Control-Manager]: ../../../assets/kuber/babaei/S06-k8s-cm-schdlr.png
+[Scheduler]: ../../../assets/kuber/babaei/S06-k8s-cm-schdlr.png
+[Stacked]: ../../../assets/kuber/babaei/S06-k8s-cluster-etcd-stck.png
+[External]: ../../../assets/kuber/babaei/S06-k8s-cluster-etcd-ext.png
+[recognize]: ../../../assets/kuber/babaei/S06-k8s-cluster-etcd-ext-cfg.png
 
 [leader-election]: https://kubernetes.io/blog/2016/01/simple-leader-election-with-kubernetes/
 [Velero]: https://velero.io/
