--- a/docs/Operation/kuber/babaei/2.md
+++ b/docs/Operation/kuber/babaei/2.md
@@ -6,11 +6,17 @@ kubernetes components architecture ![kc_arch](../../../assets/kuber/babaei/S01-k
 
 Kubernetes with Cloud Controller architecture ![kc_cc_arch](../../../assets/kuber/babaei/S01-kuber-cloud-arch.png)
 
-## [Control Plane Components](https://kubernetes.io/docs/concepts/overview/components/#control-plane-components)
+## Production Deployment Tools
+
+- [Kubeadm]
+- [KOps]
+- [Kube-Spray]
+
+## [Control Plane Components][cpc]
 
 The control plane's components make global decisions about the cluster (for example, scheduling), as well as detecting and responding to cluster events (for example, starting up a new pod when a deployment's `replicas` field is unsatisfied).
 
-### [API Server](https://kubernetes.io/docs/concepts/overview/components/#kube-apiserver)
+### [API Server][api-server]
 
 API Server is a common spot to integrate all kubernetes modules.
 
@@ -19,11 +25,11 @@ API Server is a common spot to integrate all kubernetes modules.
 - can Mutate incoming date
 - can add Admission Control (get permission or not to transaction)
 
-### [kube-scheduler](https://kubernetes.io/docs/concepts/overview/components/#kube-scheduler)
+### [kube-scheduler]
 
 - Scheduler chooses the location of the deployment
 
-### [kube-controller-manager](https://kubernetes.io/docs/concepts/overview/components/#kube-controller-manager)
+### [kube-controller-manager]
 
 - manage component "desire-state"
 - monitor the cluster state via API-Server
@@ -32,7 +38,7 @@ API Server is a common spot to integrate all kubernetes modules.
 
 - **ReplicationController**: A ReplicationController ensures that a specified number of pod replicas are running at any one time. In other words, a ReplicationController makes sure that a pod or a homogeneous set of pods is always up and available.
 
-## [Node Components](https://kubernetes.io/docs/concepts/overview/components/#node-components)
+## [Node Components][node-comps]
 
 Kubernetes runs your workload by placing containers into Pods to run on Nodes. A node may be a virtual or physical machine, depending on the cluster. Each node is managed by the control plane and contains the services necessary to run Pods.
 
@@ -40,13 +46,13 @@ Typically you have several nodes in a cluster; in a learning or resource-limited
 
 The components on a node include the `kubelet`, a `container runtime`, and the `kube-proxy`.
 
-### [kubelet](https://kubernetes.io/docs/concepts/overview/components/#kubelet)
+### [kubelet]
 
 An agent that runs on each node in the cluster. It makes sure that containers are running in a Pod.
 
 The kubelet takes a set of PodSpecs that are provided through various mechanisms and ensures that the containers described in those PodSpecs are running and healthy. The kubelet doesn't manage containers which were not created by Kubernetes.
 
-### [kube-proxy](https://kubernetes.io/docs/concepts/overview/components/#kube-proxy)
+### [kube-proxy]
 
 kube-proxy is a network proxy that runs on each node in your cluster, ***implementing part of the Kubernetes Service concept***.
 
@@ -54,13 +60,13 @@ kube-proxy maintains network rules on nodes. These network rules allow network c
 
 kube-proxy uses the operating system packet filtering layer if there is one and it's available. Otherwise, kube-proxy forwards the traffic itself.
 
-### [Container runtime](https://kubernetes.io/docs/concepts/overview/components/#container-runtime)
+### [Container runtime][cntr-rt]
 
 The container runtime is the software that is responsible for running containers.
 
 Kubernetes supports `container runtimes` such as `containerd`, `CRI-O`, and any other implementation of the Kubernetes `CRI` (Container Runtime Interface).
 
-### [PODs](https://kubernetes.io/docs/concepts/workloads/pods/)
+### [PODs]
 
 The shared context of a Pod is a set of Linux `namespaces`, `cgroups`, and potentially other facets of isolation - the same things that isolate a container. Within a Pod's context, the individual applications may have further `sub-isolations` applied.
 
@@ -81,9 +87,9 @@ A Pod is similar to a set of containers with `shared namespaces` and `shared fil
 
 ## APIs
 
-### [Container v1 core](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.27/#container-v1-core)
+### [Container v1 core][Container-v1-core]
 
-### [API terminology](https://kubernetes.io/docs/reference/using-api/api-concepts/#standard-api-terminology)
+### [API terminology][api-terms]
 
 Kubernetes generally leverages common RESTful terminology to describe the API concepts:
 
@@ -95,8 +101,8 @@ Kubernetes generally leverages common RESTful terminology to describe the API co
 
 ## Commands
 
-- [kubectl commands](https://kubernetes.io/docs/reference/generated/kubectl/kubectl-commands)
-- [kubectl cheat sheet](https://collabnix.com/kubectl-cheatsheet/)
+- [kubectl commands][kubectl-commands]
+- [kubectl cheat sheet][kubectl-cheat-sheet]
 
 ```bash
 kubectl -n kube-system get pods -o wide
@@ -113,3 +119,22 @@ kubectl get rs -o wide
 kubectl apply -f <file-name.yml>
 kubectl get pods --show-labels
 ```
+
+<!-- links -->
+
+[Kubeadm]: https://kubernetes.io/docs/reference/setup-tools/kubeadm/
+[KOps]: https://github.com/kubernetes/kops
+[Kube-Spray]: https://kubespray.io/
+[cpc]: https://kubernetes.io/docs/concepts/overview/components/#control-plane-components
+[api-server]: https://kubernetes.io/docs/concepts/overview/components/#kube-apiserver
+[kube-scheduler]: https://kubernetes.io/docs/concepts/overview/components/#kube-scheduler
+[kube-controller-manager]: https://kubernetes.io/docs/concepts/overview/components/#kube-controller-manager
+[node-comps]: https://kubernetes.io/docs/concepts/overview/components/#node-components
+[kubelet]: https://kubernetes.io/docs/concepts/overview/components/#kubelet
+[kube-proxy]: https://kubernetes.io/docs/concepts/overview/components/#kube-proxy
+[cntr-rt]: https://kubernetes.io/docs/concepts/overview/components/#container-runtime
+[PODs]: https://kubernetes.io/docs/concepts/workloads/pods
+[Container-v1-core]: https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.27/#container-v1-core
+[api-terms]: https://kubernetes.io/docs/reference/using-api/api-concepts/#standard-api-terminology
+[kubectl-commands]: https://kubernetes.io/docs/reference/generated/kubectl/kubectl-commands
+[kubectl-cheat-sheet]: https://collabnix.com/kubectl-cheatsheet
