Add kubernetes in picture

--- a/docs/Operation/kuber/babaei/2.md
+++ b/docs/Operation/kuber/babaei/2.md
@@ -6,11 +6,19 @@ kubernetes components architecture ![kc_arch](../../../assets/kuber/babaei/S01-k
 
 Kubernetes with Cloud Controller architecture ![kc_cc_arch](../../../assets/kuber/babaei/S01-kuber-cloud-arch.png)
 
-## Production Deployment Tools
+## Deployment Tools
+
+### Production
 
 - [Kubeadm]
 - [KOps]
 - [Kube-Spray]
+
+### Dev / Training
+
+- [MiniKube]
+- [KindD] (Kubernetes in Docker)
+- [DockerDesktop]
 
 ## [Control Plane Components][cpc]
 
@@ -138,3 +146,6 @@ kubectl get pods --show-labels
 [api-terms]: https://kubernetes.io/docs/reference/using-api/api-concepts/#standard-api-terminology
 [kubectl-commands]: https://kubernetes.io/docs/reference/generated/kubectl/kubectl-commands
 [kubectl-cheat-sheet]: https://collabnix.com/kubectl-cheatsheet
+[MiniKube]: https://minikube.sigs.k8s.io/docs/start/?arch=%2Fwindows%2Fx86-64%2Fstable%2F.exe+download
+[KindD]: https://kind.sigs.k8s.io/
+[DockerDesktop]: https://docs.docker.com/desktop/kubernetes/
