Add kube scheduler schema

--- a/docs/Operation/kuber/babaei/2.md
+++ b/docs/Operation/kuber/babaei/2.md
@@ -36,6 +36,8 @@ API Server is a common spot to integrate all kubernetes modules.
 ### [kube-scheduler]
 
 - Scheduler chooses the location of the deployment
+- [Scheduler] alway talks with api-server
+- It can't talk directly with etcd
 
 ### [kube-controller-manager]
 
@@ -126,3 +128,4 @@ Kubernetes generally leverages common RESTful terminology to describe the API co
 [MiniKube]: https://minikube.sigs.k8s.io/docs/start/?arch=%2Fwindows%2Fx86-64%2Fstable%2F.exe+download
 [KindD]: https://kind.sigs.k8s.io/
 [DockerDesktop]: https://docs.docker.com/desktop/kubernetes/
+[Scheduler]: ../../../assets/kuber/babaei/S02-kube-components-schedular.png
