--- a/docs/Operation/kuber/babaei/2.md
+++ b/docs/Operation/kuber/babaei/2.md
@@ -36,7 +36,7 @@ API Server is a common spot to integrate all kubernetes modules.
 ### [kube-scheduler]
 
 - Scheduler chooses the location of the deployment
-- [Scheduler] alway talks with api-server
+- Scheduler alway talks with api-server
 - It can't talk directly with etcd
 
 ### [kube-controller-manager]
@@ -66,7 +66,9 @@ The kubelet takes a set of PodSpecs that are provided through various mechanisms
 
 kube-proxy is a network proxy that runs on each node in your cluster, ***implementing part of the Kubernetes Service concept***.
 
-kube-proxy maintains network rules on nodes. These network rules allow network communication to your Pods from network sessions inside or outside of your cluster.
+**kube-proxy maintains network rules on nodes**. These network rules allow network communication to your Pods from network sessions inside or outside of your cluster.
+
+kube-proxy is in charge of updating **iptables rules**
 
 kube-proxy uses the operating system packet filtering layer if there is one and it's available. Otherwise, kube-proxy forwards the traffic itself.
 
@@ -109,6 +111,41 @@ Kubernetes generally leverages common RESTful terminology to describe the API co
 - A single instance of a resource type is called a resource, and also usually represents an object
 - For some resource types, the API includes one or more sub-resources, which are represented as URI paths below the resource
 
+## Kubernetes Components (Controller, Node) in Picture
+
+### All Controller Components
+
+![kube-components]
+
+### Kube API-Server
+
+![kube-api-server]
+
+### Kube Scheduler
+
+![kube-cheduler]
+
+### Kube Control Manager
+
+![kube-controller]
+![kube-controller-components]
+
+#### Node Controller
+
+![node-controller]
+
+#### Replication Controller
+
+![replication-controller]
+
+## Kubelet
+
+![kubelet-1]
+![kubelet-2]
+
+## Kube Proxy
+
+![kuber-proxy]
 <!-- links -->
 
 [Kubeadm]: https://kubernetes.io/docs/reference/setup-tools/kubeadm/
@@ -128,4 +165,14 @@ Kubernetes generally leverages common RESTful terminology to describe the API co
 [MiniKube]: https://minikube.sigs.k8s.io/docs/start/?arch=%2Fwindows%2Fx86-64%2Fstable%2F.exe+download
 [KindD]: https://kind.sigs.k8s.io/
 [DockerDesktop]: https://docs.docker.com/desktop/kubernetes/
-[Scheduler]: ../../../assets/kuber/babaei/S02-kube-components-schedular.png
+
+[kube-components]: ../../../assets/kuber/babaei/S02-kube-components.png
+[kube-api-server]: ../../../assets/kuber/babaei/S02-kube-components-api-server.png
+[kube-cheduler]: ../../../assets/kuber/babaei/S02-kube-components-schedular.png
+[kube-controller]: ../../../assets/kuber/babaei/S02-kube-components-control-manager.png
+[node-controller]: ../../../assets/kuber/babaei/S02-kube-components-node-controller.png
+[replication-controller]: ../../../assets/kuber/babaei/S02-kube-components-replication-controller.png
+[kube-controller-components]: ../../../assets/kuber/babaei/S02-kube-components-control-manager-components.png
+[kubelet-1]: ../../../assets/kuber/babaei/S02-kube-components-kubelet-1.png
+[kubelet-2]: ../../../assets/kuber/babaei/S02-kube-components-kubelet-2.png
+[kuber-proxy]: ../../../assets/kuber/babaei/S02-kube-components-kube-proxy.png
